<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.oswal.tarjeta.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nombres_edwin_manuel"
        android:id="@+id/tvNombres"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/apellidos_rosales_romero"
        android:id="@+id/tvApellidos"
        android:layout_above="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/carnet_2015530106"
        android:id="@+id/textView3"
        android:layout_above="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nacimiento_19_12_1996"
        android:id="@+id/textView4"
        android:layout_marginBottom="63dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:id="@+id/imgview1"
        android:src="@drawable/edw"
        android:layout_above="@+id/tvNombres"
        android:contentDescription="@string/imagen1" />

</RelativeLayout>
